--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,16 @@ img{
 .container{
     margin:auto;
   }
+
+  /* MEDIA QUERIES */
+@media(max-width:800px){
+    #showcase h1{
+      font-size:30px;
+    }
+  }
+  
+  @media(max-width:500px){
+    #showcase .showcase-content{
+      padding:40px 10px;
+    }
+  }
