--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,25 @@ img{
 .container{
     margin:auto;
   }
+
+  /* INFO */
+#info{
+    background:#333 url('../images/info-bg.jpg') no-repeat;
+    color:#fff;
+  }
+  
+  #info h2{
+    font-size:35px;
+    margin:0;
+    padding-bottom:10px;
+  }
+  
+  #info ul{
+    list-style:none;
+    padding:0;
+  }
+  
+  #info li{
+    line-height:2em;
+    font-size:20px;
+  }
